--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-router-dom": "^5.3.0"
   }
 }
