--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/meetAlexLau/Sphnx#readme",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
