--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "./index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": [],
   "author": "",
