--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3"
   },
   "browserslist": {
     "production": [
