--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/meetAlexLau/Sphnx#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.10",
+    "mongoose": "^6.0.11",
     "nodemon": "^2.0.13"
   }
 }
