--- a/client/package.json
+++ b/client/package.json
@@ -8,17 +8,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
-    "passport-google-oauth": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3"
   },
