--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13",
-    "passport": "^0.5.0",
-    "passport-google-oauth20": "^2.0.0"
+    "nodemon": "^2.0.13"
   }
 }
