--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
