--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "react-time-tracker": "^1.0.0"
   }
 }
